# eos

Docker/: Dockerfile
Docker/builder/: Dockerfile_kinesis
plugins/: CMakeLists.txt
plugins/kinesis_plugin/: CMakeLists.txt  gao.sh  kinesis_plugin.cpp
plugins/kinesis_plugin/include/eosio/kinesis_plugin/: kinesis_plugin.hpp  kinesis_producer.hpp
programs/nodeos/: CMakeLists.txt
